# university

./: README.md
Semester2/Programming_methodology/Lists/List5/let/: dune-project
Semester2/Programming_methodology/Lists/List5/let/lib/: Ast.ml  Eval.ml  Lexer.mll  Parser.mly  dune
Semester2/Programming_methodology/Lists/List5/let/test/: dune
Semester2/Programming_methodology/Lists/List6/fun/: dune-project
Semester2/Programming_methodology/Lists/List6/fun/lib/: Ast.ml  Eval.ml  Lexer.mll  Parser.mly  dune
Semester2/Programming_methodology/Lists/List8/t3_t4_t5_t6/while/: dune-project
Semester2/Programming_methodology/Lists/List8/t3_t4_t5_t6/while/examples/: fib.while  t5.while  t6.while
Semester2/Programming_methodology/Lists/List8/t3_t4_t5_t6/while/lib/: Ast.ml  Eval.ml  Lexer.mll  Parser.mly  dune
Semester2/Programming_methodology/Lists/List9/t6/calc_simple/: dune-project
Semester2/Programming_methodology/Lists/List9/t6/calc_simple/_build/: .db  .digest-db  log  trace.csexp
Semester2/Programming_methodology/Lists/List9/t6/calc_simple/_build/default/: calc.dune-package  calc.opam
Semester2/Programming_methodology/Lists/List9/t6/calc_simple/_build/default/.dune/: configurator  configurator.v2
Semester2/Programming_methodology/Lists/List9/t6/calc_simple/_build/default/.utop/: utop.ml-gen
Semester2/Programming_methodology/Lists/List9/t6/calc_simple/_build/default/lib/: Ast.ml  Eval.ml  Lexer.ml  Parser.ml  Parser.mli  Parser__mock.ml.mock  Parser__mock.mli.inferred  VM.ml  VMEval.ml  calc.cma  calc.cmxa  calc.cmxs  calc.ml-gen
Semester2/Programming_methodology/Lists/List9/t6/calc_simple/_build/default/lib/.calc.objs/: calc__Ast.impl.d  calc__Compiler.impl.d  calc__Decompiler.impl.all-deps  calc__Decompiler.impl.d  calc__Eval.impl.d  calc__Lexer.impl.d  calc__Parser.impl.d  calc__Parser.intf.d  (+4 more)
Semester2/Programming_methodology/Lists/List9/t6/calc_simple/lib/: Compiler.ml  Decompiler.ml  Lexer.mll  Parser.mly  dune
(+277 files in other folders)
